Feature/infra 74 (#3)
* began transferring over build scripts

* Added Dockerfile

* Added configmap

* Wrote deployment script

* Updated readme

* Updated configmap

* More updates to configmap

* Integrated secret into deployment

* Added antrun plugin for maven

* Tweak to antrun

* Fixed test runner for preview features

* Tweaked ant script

* Fixed dockerfile bug